--- a/client/src/templates/Challenges/components/tool-panel.css
+++ b/client/src/templates/Challenges/components/tool-panel.css
@@ -9,8 +9,13 @@
 }
 
 .tool-panel-group-mobile {
+  position: absolute;
+  left: 0;
+  bottom: 0;
   display: flex;
   flex-direction: row-reverse;
+  width: 100%;
+  padding: 0 0 3px 0;
 }
 
 .tool-panel-group-mobile > .btn-block,
